--- a/Assignments/Assignment_02.ipynb
+++ b/Assignments/Assignment_02.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "id": "f52e6a0b",
       "metadata": {
         "id": "f52e6a0b"
@@ -83,11 +83,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 3,
       "id": "b7fa5fa1",
       "metadata": {
         "id": "b7fa5fa1",
-        "outputId": "428bf471-93c6-4b5a-a871-6ed7083bafe0",
+        "outputId": "fc4ef5e9-c684-41f0-d2fe-746bad150c65",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -195,11 +195,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 4,
       "id": "083c5c46",
       "metadata": {
         "id": "083c5c46",
-        "outputId": "3fb68391-4b8a-4436-f5ee-9b7f0de825c5",
+        "outputId": "15db5e2e-a100-4c53-e2df-229ab62ca9c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -213,7 +213,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 4
         }
       ],
       "source": [
@@ -233,11 +233,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "id": "02b04021",
       "metadata": {
         "id": "02b04021",
-        "outputId": "9a1277e0-1767-4cd3-d8a4-461f54715ae4",
+        "outputId": "e7dad41d-17f3-41b8-c3d6-f8289f856ec1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -251,7 +251,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ],
       "source": [
@@ -270,11 +270,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "id": "40e6b70d",
       "metadata": {
         "id": "40e6b70d",
-        "outputId": "0dda200f-114c-404f-f155-e007c300c9f0",
+        "outputId": "f06b79ea-8621-4680-b2db-0a6b4a259a91",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -362,11 +362,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "id": "bcceacf7",
       "metadata": {
         "id": "bcceacf7",
-        "outputId": "bb7dcb08-02d4-4c53-f5c4-370358508f4c",
+        "outputId": "ef741fba-3476-4183-a0ff-d356c6df101b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -380,7 +380,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ],
       "source": [
@@ -401,11 +401,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "id": "3d117d54",
       "metadata": {
         "id": "3d117d54",
-        "outputId": "dcfc5f91-a98a-45da-bb70-60d9992fc914",
+        "outputId": "c851d5d5-6322-4acd-a9e6-4e7fedaa4553",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -421,7 +421,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ],
       "source": [
@@ -441,11 +441,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "id": "22d23470",
       "metadata": {
         "id": "22d23470",
-        "outputId": "69285b94-8c57-43c8-9554-06f347f17802",
+        "outputId": "5854533e-055a-4af0-d4f6-f5abdb32333b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -461,7 +461,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ],
       "source": [
@@ -482,11 +482,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "id": "7449e82d",
       "metadata": {
         "id": "7449e82d",
-        "outputId": "49364768-8d32-49f9-ef50-53e82bfd3772",
+        "outputId": "d102daac-2a79-4ec1-b90c-8705de33e487",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -519,31 +519,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 11,
       "id": "1a84bed8",
       "metadata": {
         "id": "1a84bed8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e0831a7d-0b49-472e-de95-36ef3760e749"
+        "outputId": "8bb79064-bbf5-4a4e-c69f-07c3a86fdfe4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n",
-            "1\n",
-            "4\n"
+            "(array([0, 1, 4]),)\n"
           ]
         }
       ],
       "source": [
         "z=np.array([1,2,0,0,4,0])\n",
-        "for i in range(len(z)):\n",
-        "  if z[i]!=0:\n",
-        "    print(i)"
+        "x=np.where(z!=0)\n",
+        "print(x)"
       ]
     },
     {
@@ -565,7 +562,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "03366bbb-4e32-444a-cfa5-d838a6eb9d51"
+        "outputId": "366104d5-d069-4780-9bc1-595ef38ea8ae"
       },
       "outputs": [
         {
